--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 nav {
     width: 100%;
     height: 80px;
-    background-color: grey;
+    background-color: #2f2f2f;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -9,11 +9,41 @@ nav {
 header {
     width: 100%;
     height: 600px;
-    background-color: lightgray;
+    background-image: url(../assets/maxresdefault.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.tint {
+    width: 100%;
+    height: 600px;
+    background-color: rgba(0,0,0,0.3);  
+    padding-top: 150px;
+    padding-left: 10%;
+    color: #ffffff;
+}
+
+.tint div {
+    border-color: #ffffff;
+    color: #ffffff;
+}
+
+.tint div:hover{
+    background-color: #ffffff;
+    color: black;
 }
 
 header h3 {
+    font-family: 'Josefin Sans', sans-serif;
     font-style: italic;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+header h1 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 700;
 }
 
 footer {
@@ -39,6 +69,7 @@ h4 {
     color: white;
     padding-top: 14px;
     font-size: 30px;
+    font-family: 'Rubik Iso', cursive;
 }
 
 .nav-con {
@@ -83,6 +114,7 @@ h4 {
     color: white;
     text-align: center;
     padding-top: 25px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .PicBox {
@@ -110,7 +142,6 @@ h4 {
     border: 2px solid #2f2f2f;
     color: #2f2f2f;
     text-align: center;
-    background-color: white;
     padding-top: 5px;
     font-weight: bold;
 }
@@ -126,6 +157,7 @@ h4 {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 25px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .profile {
@@ -138,12 +170,17 @@ h4 {
     margin-top: 15px;
 }
 
+.circlepic img {
+    background-position: center;
+    background-size: cover;
+}
+
 .circlepic {
     width: 200px;
     height: 200px;
     border-radius: 50%;
     background-color: lightgrey;
-    margin: 0 auto;;
+    margin: 0 auto;
 }
 
 .button {
@@ -172,7 +209,7 @@ h4 {
 }
 
 .active {
-    background-color: #2f2f2f !important;
+    background-color: #ff0000 !important;
     color: white !important;
 }
 
@@ -202,7 +239,7 @@ h4 {
     cursor: pointer;
 }
 
-.Half{
+.half{
     text-align: left;
     padding-left: 15%;
     padding-right: 15%;
@@ -217,4 +254,70 @@ h4 {
 .half h3{
     font-style: italic;
     margin-top: 25px;
+} 
+
+.MapBox {
+    width: 550px;
+    height: 350px;
+    background-color: lightgray;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-left: 28%;
+}
+
+.old-eleven {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url(../assets/old_eleven.png);
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.old-dustin {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url(../assets/old_dustin.png);
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.old-mike {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url(../assets/old_mike.png);
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.zombie {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url(../assets/zombie.jpg);
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.section-subtitle {
+    font-style: italic;
+    text-align: center;
+}
+
+.circle-pic {
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    background-color: lightgrey;
+    margin: 0 auto;
+    margin-top: 45px;
+    background-image: url("../assets/hands.jpg");
+    background-position: center;
+    background-size: cover;
 }
